# ESTUDO-DO-CASO-HDB

./: .coverage  .coveragerc  .gitattributes  Dockerfile  README.md  app.py  bandit.yaml  dependency-check-report.html  dependency-report.html  docker-compose.yml  gunicorn.conf.py  meson.build  package-lock.json  package.json  pom.xml  requirements.txt  run.py  tall meson  webpack.config.js
.github/workflows/: ci-cd.yml  ci.yml  ci_pipeline.yml  main.yml  your-workflow.yml
.nyc_output/processinfo/: 04fb30af-d614-4a5a-b609-90743f16e975.json  d4721525-1f91-4b13-b90f-fda4beb983a4.json  f4669102-a81e-4fdf-8668-a4d1c5e78655.json  index.json
coverage/: index.html
dependency-check/data/: odc.mv.db
dependency-check/data/cache/: CENTRAL.data  CENTRAL.key  NODEAUDIT.data  NODEAUDIT.key  POM.data  POM.key
dependency-check/dependency-check/data/cache/: CENTRAL.data  CENTRAL.key  POM.data  POM.key
dependency-check/report/: dependency-check-report.html
myenv/: pyvenv.cfg
src/: app.js  pom.xml
templates/: login.html
tests/: test_example.py  test_run.py
